# just-cool

imapparser/: CMakeLists.txt  README.md  imapparser.cpp  imapparser.h  main.cpp
imapparser/py/: README.md  pyimapparser.cpp  pyimapparser.pyx  setup.py
imapparser/py2/: README.md  main.py  pyimapparser.pyx
